; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/mxss/extr_mxss.c_fled_val_increase.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/mxss/extr_mxss.c_fled_val_increase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fled_val = common dso_local global i32 0, align 4
@FLED_VAL_STEP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fled_val_increase() #0 {
  %1 = load i32, i32* @fled_val, align 4
  %2 = load i32, i32* @FLED_VAL_STEP, align 4
  %3 = add nsw i32 %1, %2
  %4 = icmp sgt i32 %3, 255
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32 255, i32* @fled_val, align 4
  br label %10

6:                                                ; preds = %0
  %7 = load i32, i32* @FLED_VAL_STEP, align 4
  %8 = load i32, i32* @fled_val, align 4
  %9 = add nsw i32 %8, %7
  store i32 %9, i32* @fled_val, align 4
  br label %10

10:                                               ; preds = %6, %5
  %11 = call i32 (...) @eeprom_update_conf()
  %12 = call i32 (...) @rgblight_set()
  ret void
}

declare dso_local i32 @eeprom_update_conf(...) #1

declare dso_local i32 @rgblight_set(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
